[tool.poetry]
name = "streamlit-bot"
version = "0.1.0"
description = ""
authors = ["pu-of-parari"]
readme = "README.md"
packages = [{include = "streamlit_bot"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<4.0"
streamlit = "^1.23.1"
urllib3 = "<2.0"
streamlit-chat = "^0.0.2.2"
langchain = "^0.0.190"
openai = "^0.27.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
